// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the content is rendered when the modal is open 1`] = `
<div
  aria-labelledby="radix-_r_4_"
  class="_overlay_2f5303 _animate_2f5303 _modal_dbeffe _dialog_dbeffe _glass_sepwu_8"
  data-state="open"
  id="radix-_r_3_"
  role="dialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <div
    class="_content_dbeffe"
  >
    <div
      class="_header_dbeffe"
    >
      <h2
        class="_typography_6v6n8_153 _font-heading-md-semibold_6v6n8_112"
        id="radix-_r_4_"
      >
        My modal
      </h2>
    </div>
    <div
      class="_body_dbeffe"
    >
      <p>
        This is the content.
      </p>
    </div>
  </div>
</div>
`;

exports[`the modal renders as a drawer in mobile viewports 1`] = `
<div
  aria-labelledby="radix-_r_a_"
  class="_overlay_2f5303 _modal_dbeffe _drawer_dbeffe"
  data-state="open"
  data-vaul-animate="true"
  data-vaul-custom-container="false"
  data-vaul-delayed-snap-points="false"
  data-vaul-drawer=""
  data-vaul-drawer-direction="bottom"
  data-vaul-snap-points="false"
  id="radix-_r_9_"
  role="dialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <div
    class="_content_dbeffe"
  >
    <div
      class="_header_dbeffe"
    >
      <div
        class="_handle_dbeffe"
      />
      <h2
        id="radix-_r_a_"
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        My modal
      </h2>
    </div>
    <div
      class="_body_dbeffe"
    >
      <p>
        This is the content.
      </p>
    </div>
  </div>
</div>
`;
